final version lab4